applications/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  # labels:
  #   pod-security.kubernetes.io/enforce: privileged
