applications/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    gethomepage.dev/description: Jellyfin
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/href: https://media.thegraveshouse.com
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/name: Media Library
    gethomepage.dev/pod-selector: app.kubernetes.io/name=jellyfin
    gethomepage.dev/siteMonitor: https://media.thegraveshouse.com
spec:
  hostnames:
  - media.thegraveshouse.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: jellyfin
      namespace: jellyfin
      port: 8096
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
